src/test/ui/regions/regions-close-object-into-object-5.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-close-object-into-object-5.rs:27:5
   |
LL |     box B(&*v) as Box<X>
   |     ^^^^^^^^^^^^^^^^^^^^

warning: not reporting region error due to nll
  --> $DIR/regions-close-object-into-object-5.rs:27:11
   |
LL |     box B(&*v) as Box<X>
   |           ^^^

warning: not reporting region error due to nll
  --> $DIR/regions-close-object-into-object-5.rs:27:9
   |
LL |     box B(&*v) as Box<X>
   |         ^

warning: not reporting region error due to nll
  --> $DIR/regions-close-object-into-object-5.rs:27:9
   |
LL |     box B(&*v) as Box<X>
   |         ^^^^^^

warning: not reporting region error due to nll
  --> $DIR/regions-close-object-into-object-5.rs:27:5
   |
LL |     box B(&*v) as Box<X>
   |     ^^^^^^^^^^

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:27:5
   |
LL |     box B(&*v) as Box<X>
   |     ^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:27:9
   |
LL |     box B(&*v) as Box<X>
   |         ^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...

error[E0597]: `*v` does not live long enough
  --> $DIR/regions-close-object-into-object-5.rs:27:11
   |
LL |     box B(&*v) as Box<X>
   |           ^^^ borrowed value does not live long enough
...
LL | }
   | - `*v` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to 3 previous errors

Some errors occurred: E0310, E0597.
For more information about an error, try `rustc --explain E0310`.
